{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 133,
  "lineage": "b6f7c288-c78a-2abe-743e-3b51c12ce7c1",
  "resources": [
    {
      "module": "module.addons",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "name": "argocd",
                "resource_version": "4335",
                "uid": "224c6846-6d71-4e73-bdfc-74c604785ab8"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "argocd"
          },
          "dependencies": [
            "data.aws_eks_cluster.cluster",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.module.eks.aws_cloudwatch_log_group.this",
            "module.eks.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.eks.module.eks.aws_eks_access_entry.this",
            "module.eks.module.eks.aws_eks_access_policy_association.this",
            "module.eks.module.eks.aws_eks_addon.before_compute",
            "module.eks.module.eks.aws_eks_addon.this",
            "module.eks.module.eks.aws_eks_cluster.this",
            "module.eks.module.eks.aws_eks_identity_provider_config.this",
            "module.eks.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.module.eks.aws_iam_policy.cluster_encryption",
            "module.eks.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.module.eks.aws_iam_policy.custom",
            "module.eks.module.eks.aws_iam_role.eks_auto",
            "module.eks.module.eks.aws_iam_role.this",
            "module.eks.module.eks.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks.module.eks.aws_iam_role_policy_attachment.custom",
            "module.eks.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.eks.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.eks.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.eks.aws_security_group_rule.cluster",
            "module.eks.module.eks.aws_security_group_rule.node",
            "module.eks.module.eks.data.aws_caller_identity.current",
            "module.eks.module.eks.data.aws_eks_addon_version.this",
            "module.eks.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.module.eks.data.aws_iam_policy_document.custom",
            "module.eks.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.module.eks.data.aws_iam_session_context.current",
            "module.eks.module.eks.data.aws_partition.current",
            "module.eks.module.eks.data.tls_certificate.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.eks.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.eks.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.eks.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.eks.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.eks.module.eks.module.fargate_profile.data.aws_region.current",
            "module.eks.module.eks.module.kms.aws_kms_alias.this",
            "module.eks.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.eks.module.kms.aws_kms_grant.this",
            "module.eks.module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.eks.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.eks.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.eks.module.eks.time_sleep.this",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.addons",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "name": "monitoring",
                "resource_version": "4334",
                "uid": "fdac538e-e469-43b0-821a-57166fa5e9e3"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "monitoring"
          },
          "dependencies": [
            "data.aws_eks_cluster.cluster",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.module.eks.aws_cloudwatch_log_group.this",
            "module.eks.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.eks.module.eks.aws_eks_access_entry.this",
            "module.eks.module.eks.aws_eks_access_policy_association.this",
            "module.eks.module.eks.aws_eks_addon.before_compute",
            "module.eks.module.eks.aws_eks_addon.this",
            "module.eks.module.eks.aws_eks_cluster.this",
            "module.eks.module.eks.aws_eks_identity_provider_config.this",
            "module.eks.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.module.eks.aws_iam_policy.cluster_encryption",
            "module.eks.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.module.eks.aws_iam_policy.custom",
            "module.eks.module.eks.aws_iam_role.eks_auto",
            "module.eks.module.eks.aws_iam_role.this",
            "module.eks.module.eks.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks.module.eks.aws_iam_role_policy_attachment.custom",
            "module.eks.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.eks.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.eks.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.eks.aws_security_group_rule.cluster",
            "module.eks.module.eks.aws_security_group_rule.node",
            "module.eks.module.eks.data.aws_caller_identity.current",
            "module.eks.module.eks.data.aws_eks_addon_version.this",
            "module.eks.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.module.eks.data.aws_iam_policy_document.custom",
            "module.eks.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.module.eks.data.aws_iam_session_context.current",
            "module.eks.module.eks.data.aws_partition.current",
            "module.eks.module.eks.data.tls_certificate.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.eks.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.eks.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.eks.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.eks.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.eks.module.eks.module.fargate_profile.data.aws_region.current",
            "module.eks.module.eks.module.kms.aws_kms_alias.this",
            "module.eks.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.eks.module.kms.aws_kms_grant.this",
            "module.eks.module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.eks.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.eks.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.eks.module.eks.time_sleep.this",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.addons",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "rollouts",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argo-rollouts",
            "metadata": [
              {
                "generation": 0,
                "name": "argo-rollouts",
                "resource_version": "4336",
                "uid": "901ac2b0-ad68-4bed-b484-1e3d7d2124a0"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "argo-rollouts"
          },
          "dependencies": [
            "data.aws_eks_cluster.cluster",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.module.eks.aws_cloudwatch_log_group.this",
            "module.eks.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.eks.module.eks.aws_eks_access_entry.this",
            "module.eks.module.eks.aws_eks_access_policy_association.this",
            "module.eks.module.eks.aws_eks_addon.before_compute",
            "module.eks.module.eks.aws_eks_addon.this",
            "module.eks.module.eks.aws_eks_cluster.this",
            "module.eks.module.eks.aws_eks_identity_provider_config.this",
            "module.eks.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.module.eks.aws_iam_policy.cluster_encryption",
            "module.eks.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.module.eks.aws_iam_policy.custom",
            "module.eks.module.eks.aws_iam_role.eks_auto",
            "module.eks.module.eks.aws_iam_role.this",
            "module.eks.module.eks.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks.module.eks.aws_iam_role_policy_attachment.custom",
            "module.eks.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.eks.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.eks.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.eks.aws_security_group_rule.cluster",
            "module.eks.module.eks.aws_security_group_rule.node",
            "module.eks.module.eks.data.aws_caller_identity.current",
            "module.eks.module.eks.data.aws_eks_addon_version.this",
            "module.eks.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.module.eks.data.aws_iam_policy_document.custom",
            "module.eks.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.module.eks.data.aws_iam_session_context.current",
            "module.eks.module.eks.data.aws_partition.current",
            "module.eks.module.eks.data.tls_certificate.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.eks.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.eks.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.eks.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.eks.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.eks.module.eks.module.fargate_profile.data.aws_region.current",
            "module.eks.module.eks.module.kms.aws_kms_alias.this",
            "module.eks.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.eks.module.kms.aws_kms_grant.this",
            "module.eks.module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.eks.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.eks.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.eks.module.eks.time_sleep.this",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:793477791445:security-group/sg-0d5381408bc1bf2e9",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0d5381408bc1bf2e9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00d838641bf645d3c"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "platform-eks-cluster-2026062908242508900000000c",
            "name_prefix": "platform-eks-cluster-",
            "owner_id": "793477791445",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "platform-eks-cluster"
            },
            "tags_all": {
              "Name": "platform-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-03201483703315d83"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:793477791445:security-group/sg-00d838641bf645d3c",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d838641bf645d3c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d5381408bc1bf2e9"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d5381408bc1bf2e9"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d5381408bc1bf2e9"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d5381408bc1bf2e9"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d5381408bc1bf2e9"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d5381408bc1bf2e9"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "platform-eks-node-2026062908242508280000000a",
            "name_prefix": "platform-eks-node-",
            "owner_id": "793477791445",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "platform-eks-node",
              "kubernetes.io/cluster/platform-eks": "owned"
            },
            "tags_all": {
              "Name": "platform-eks-node",
              "kubernetes.io/cluster/platform-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-03201483703315d83"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1715898227",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d5381408bc1bf2e9",
            "security_group_rule_id": "sgr-0dc4b8f3953cc494e",
            "self": false,
            "source_security_group_id": "sg-00d838641bf645d3c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2454962510",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00d838641bf645d3c",
            "security_group_rule_id": "sgr-0e510466e199372de",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-251457254",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00d838641bf645d3c",
            "security_group_rule_id": "sgr-0f7560c639740e51d",
            "self": false,
            "source_security_group_id": "sg-0d5381408bc1bf2e9",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2376292005",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00d838641bf645d3c",
            "security_group_rule_id": "sgr-0c6e2209a25b7f325",
            "self": false,
            "source_security_group_id": "sg-0d5381408bc1bf2e9",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1155608883",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00d838641bf645d3c",
            "security_group_rule_id": "sgr-07388c13e72523365",
            "self": false,
            "source_security_group_id": "sg-0d5381408bc1bf2e9",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1472007442",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00d838641bf645d3c",
            "security_group_rule_id": "sgr-0598ac62246f7291e",
            "self": false,
            "source_security_group_id": "sg-0d5381408bc1bf2e9",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-857489113",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00d838641bf645d3c",
            "security_group_rule_id": "sgr-04cc04d85e650122b",
            "self": false,
            "source_security_group_id": "sg-0d5381408bc1bf2e9",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-673916172",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00d838641bf645d3c",
            "security_group_rule_id": "sgr-08cfba27ee2c54455",
            "self": false,
            "source_security_group_id": "sg-0d5381408bc1bf2e9",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2447491850",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00d838641bf645d3c",
            "security_group_rule_id": "sgr-01f97ba862da0c09c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2874257796",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00d838641bf645d3c",
            "security_group_rule_id": "sgr-075fc9e622f9139a0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-252580459",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-00d838641bf645d3c",
            "security_group_rule_id": "sgr-0483a9a250f4e1c72",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:793477791445:network-acl/acl-0ed3cd307c93eb82a",
            "default_network_acl_id": "acl-0ed3cd307c93eb82a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ed3cd307c93eb82a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "793477791445",
            "subnet_ids": [
              "subnet-02f32a5be48853146",
              "subnet-09ca7878362ad68ab",
              "subnet-0d6416160d1005fe9",
              "subnet-0fffa5a541e48c444"
            ],
            "tags": {
              "Name": "platform-vpc-default"
            },
            "tags_all": {
              "Name": "platform-vpc-default"
            },
            "vpc_id": "vpc-03201483703315d83"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:793477791445:route-table/rtb-0c6b56f909a911bb6",
            "default_route_table_id": "rtb-0c6b56f909a911bb6",
            "id": "rtb-0c6b56f909a911bb6",
            "owner_id": "793477791445",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "platform-vpc-default"
            },
            "tags_all": {
              "Name": "platform-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-03201483703315d83"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:793477791445:security-group/sg-0bdf235d3648d148d",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0bdf235d3648d148d",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "793477791445",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "platform-vpc-default"
            },
            "tags_all": {
              "Name": "platform-vpc-default"
            },
            "vpc_id": "vpc-03201483703315d83"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091f0b799271ebb6e",
            "arn": "arn:aws:ec2:ap-south-1:793477791445:elastic-ip/eipalloc-091f0b799271ebb6e",
            "association_id": "eipassoc-0a50f755e10afc0e9",
            "domain": "vpc",
            "id": "eipalloc-091f0b799271ebb6e",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0b1edf5db670ac9b4",
            "private_dns": "ip-10-0-1-200.ap-south-1.compute.internal",
            "private_ip": "10.0.1.200",
            "public_dns": "ec2-13-207-139-93.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.207.139.93",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "platform-vpc-ap-south-1a"
            },
            "tags_all": {
              "Name": "platform-vpc-ap-south-1a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:793477791445:internet-gateway/igw-034dd22c2ea6cb819",
            "id": "igw-034dd22c2ea6cb819",
            "owner_id": "793477791445",
            "tags": {
              "Name": "platform-vpc"
            },
            "tags_all": {
              "Name": "platform-vpc"
            },
            "vpc_id": "vpc-03201483703315d83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091f0b799271ebb6e",
            "association_id": "eipassoc-0a50f755e10afc0e9",
            "connectivity_type": "public",
            "id": "nat-0e1363cd6bcd44539",
            "network_interface_id": "eni-0b1edf5db670ac9b4",
            "private_ip": "10.0.1.200",
            "public_ip": "13.207.139.93",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fffa5a541e48c444",
            "tags": {
              "Name": "platform-vpc-ap-south-1a"
            },
            "tags_all": {
              "Name": "platform-vpc-ap-south-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00993d75051c3b2f81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e1363cd6bcd44539",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00993d75051c3b2f8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-034dd22c2ea6cb819",
            "id": "r-rtb-091b2386f1423d0431080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-091b2386f1423d043",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:793477791445:route-table/rtb-00993d75051c3b2f8",
            "id": "rtb-00993d75051c3b2f8",
            "owner_id": "793477791445",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e1363cd6bcd44539",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "platform-vpc-private"
            },
            "tags_all": {
              "Name": "platform-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03201483703315d83"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:793477791445:route-table/rtb-091b2386f1423d043",
            "id": "rtb-091b2386f1423d043",
            "owner_id": "793477791445",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-034dd22c2ea6cb819",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "platform-vpc-public"
            },
            "tags_all": {
              "Name": "platform-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03201483703315d83"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2348800c3cbefda",
            "route_table_id": "rtb-00993d75051c3b2f8",
            "subnet_id": "subnet-02f32a5be48853146"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09df24bdcbabe6d13",
            "route_table_id": "rtb-00993d75051c3b2f8",
            "subnet_id": "subnet-09ca7878362ad68ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047ac75a4ad3e39ac",
            "route_table_id": "rtb-091b2386f1423d043",
            "subnet_id": "subnet-0fffa5a541e48c444"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074b8d51c5396c1dd",
            "route_table_id": "rtb-091b2386f1423d043",
            "subnet_id": "subnet-0d6416160d1005fe9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:793477791445:subnet/subnet-02f32a5be48853146",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f32a5be48853146",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793477791445",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "platform-vpc-private-ap-south-1a"
            },
            "tags_all": {
              "Name": "platform-vpc-private-ap-south-1a"
            },
            "vpc_id": "vpc-03201483703315d83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:793477791445:subnet/subnet-09ca7878362ad68ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ca7878362ad68ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793477791445",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "platform-vpc-private-ap-south-1b"
            },
            "tags_all": {
              "Name": "platform-vpc-private-ap-south-1b"
            },
            "vpc_id": "vpc-03201483703315d83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:793477791445:subnet/subnet-0fffa5a541e48c444",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fffa5a541e48c444",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793477791445",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "platform-vpc-public-ap-south-1a"
            },
            "tags_all": {
              "Name": "platform-vpc-public-ap-south-1a"
            },
            "vpc_id": "vpc-03201483703315d83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:793477791445:subnet/subnet-0d6416160d1005fe9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6416160d1005fe9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793477791445",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "platform-vpc-public-ap-south-1b"
            },
            "tags_all": {
              "Name": "platform-vpc-public-ap-south-1b"
            },
            "vpc_id": "vpc-03201483703315d83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:793477791445:vpc/vpc-03201483703315d83",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ed3cd307c93eb82a",
            "default_route_table_id": "rtb-0c6b56f909a911bb6",
            "default_security_group_id": "sg-0bdf235d3648d148d",
            "dhcp_options_id": "dopt-a99692c1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03201483703315d83",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c6b56f909a911bb6",
            "owner_id": "793477791445",
            "tags": {
              "Name": "platform-vpc"
            },
            "tags_all": {
              "Name": "platform-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}